--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="app-container">
-        
+        <div class="app-box">
+            
+        </div>
     </div>
 </body>
 </html>
